--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Kamron Poosti - Full Stack Engineer</title>
   <meta name="description" content="Self Developed personal Portfolio website build with React.js">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-25V7W0R9Q1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-25V7W0R9Q1');
+</script>
 </head>
 
 <body>
